fixing spacing bugs

--- a/Main/assets/css/styles.css
+++ b/Main/assets/css/styles.css
@@ -35,6 +35,7 @@ nav {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 nav a {
